Add checkbox. Improve UI

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tachyons/4.9.1/tachyons.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
